adding responsive navigation

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
       <nav>
             <div>
                 <h3 class="logo">Syead</h3>
-            </div>         
+            </div> 
+            <input type="checkbox" id="click">
+            <label for="click" class="check-box"><i class="fas fa-bars"></i></label>    
             <ul>
-                <li><a class="acitive-nav" href="#">Home</a></li>
+                <li><a class="active-nav" href="#">Home</a></li>
                 <li><a href="#">Gallary</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>            
       </nav>
+ 
 </body>
 </html>
