adding services area

--- a/index.html
+++ b/index.html
@@ -11,20 +11,77 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <nav>
-            <div>
-                <h3 class="logo">Syead</h3>
-            </div> 
-            <input type="checkbox" id="click">
-            <label for="click" class="check-box"><i class="fas fa-bars"></i></label>    
-            <ul>
-                <li><a class="active-nav" href="#">Home</a></li>
-                <li><a href="#">Gallary</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>            
-      </nav>
+    <nav>
+        <div>
+            <h3 class="logo">Syead</h3>
+        </div> 
+        <input type="checkbox" id="click">
+        <label for="click" class="check-box"><i class="fas fa-bars"></i></label>    
+        <ul>
+            <li><a class="active-nav" href="#">Home</a></li>
+            <li><a href="#">Gallary</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>            
+    </nav>
+    <header>
+
+    </header>
+    <main>
+        <!-- services section code start hare  -->
+        <section id="services-section">
+            <h3 class="Services-title">Our Services</h3>
+            <div class="services-item-parent">
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Programming</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>DateBase</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Download</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>JavaScript</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Python</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+                <div class="services-single-item">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Cyber Security</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, architecto libero voluptas eaque repellendus quasi exercitationem suscipit alias, mollitia incidunt deserunt dignissimos, vel dolorem voluptatibus quibusdam laudantium nemo a dolores quos 
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- services section code end hare  -->
+    </main>
+
+      
  
 </body>
 </html>
