adding footer part

--- a/index.html
+++ b/index.html
@@ -255,6 +255,32 @@
         </section>
     </main>
 
+    <footer>
+        <div class="footer-parent">
+            <div class="footer-single-item-1">
+                <h3> <span>[ </span> ABOUT US<span> ]</span></h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit aut ad odio quos assumenda dolor perferendis, molestiae itaque</p>
+            </div>
+            <div class="footer-single-item-2">
+                <h3> <span>[ </span> QUICK INKS <span> ]</span></h3>
+                <p><i class="fa-solid fa-chevron-right"></i>About</p>
+                <p><i class="fa-solid fa-chevron-right"></i>Services</p> 
+                <p><i class="fa-solid fa-chevron-right"></i>Technologies</p>                                     
+            </div>
+            <div class="footer-single-item-3">
+                <h3> <span>[ </span> SOCIAL MEDIA<span> ]</span></h3>
+                <div class="footer-icon">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+        <hr style="margin-top: 50px;">
+        <p style="text-align: center; margin-top: 30px; color: white;font-size: 20px;">© 2022 programming shikkbo || All Rights Reserved </p>
+    </footer>
+
       
  
 </body>
